[root layer scrolls] FramePainter should clip

FramePainter clips overflowing content without Root Layer
Scrolls (RLS) and should clip with RLS as well. This fixes
33 layout tests with RLS.

Tests such as [1] are mostly fixed by this patch but still
fail due to a positioning bug (https://crbug.com/746777).

[1] virtual/prefer_compositing_to_lcd_text/scrollbars/hidden-scrollbars-invisible.html

Bug: 773368
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ic5ec181faaa6e43ea0c3bf2dadb0a81aabc59ee5
Reviewed-on: https://chromium-review.googlesource.com/711378
Reviewed-by: Steve Kobes <skobes@chromium.org>
Reviewed-by: Stefan Zager <szager@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508214}
Former-commit-id: 8c1f345d3db983cbc3bd0c6b2615a7a5dfd84876